--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,9 +57,16 @@ body {
   margin: 0;
 }
 
+.hero-h1 {
+  font-size: 3rem;
+}
+
 @media (max-width: 800px) {
   h1 {
     font-size: 1rem;
+  }
+  .hero-h1 {
+    font-size: 1.5rem;
   }
   .bg-image {
     margin-top: 100px;
@@ -175,6 +182,11 @@ footer i {
   justify-content: center;
   align-content: center;
 }
+@media (max-width: 500px) {
+  .contact-us-img {
+    margin-top: 50px;
+  }
+}
 .CTA p {
   text-align: justify;
   text-justify: inter-word;
@@ -236,13 +248,13 @@ footer i {
   border-bottom: 5px solid #ff9700;
 }
 
-.aboutUsImage img {
+/* .aboutUsImage img {
   display: block;
   width: 100%;
   height: 400px;
   object-fit: cover;
   object-position: 0% 100%;
-}
+} */
 
 .why-us {
   margin: 80px 0;
@@ -280,4 +292,10 @@ footer i {
 input,
 textarea {
   background-color: #d3d3d3 !important;
+}
+
+@media (min-width: 500px) {
+  .card-deck .card {
+    min-width: 300px;
+  }
 }
